--- a/secrets.toml
+++ b/secrets.toml
@@ -1,1 +1,1 @@
-api_key = "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 " 
+OPENAI_API_KEY = "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 " 
